# ghidra_decompile

./: .gitignore  buildcsharp.cmd  readme.md
doc/: frida_ana.md  gh_operation.md  ghidra-decompile-cfg.md  release-notes.md
src/: CMakeLists.txt  main.cc
src/decompile/: DataUnderlyingPipeManager.cs  IRP.cs  Program.cs  ProtocolConst.cs  TaskCommand.cs  decompile.csproj  decompile.sln
src/decompile/Properties/: AssemblyInfo.cs
src/frida/: test.py
